<resources>
    <string name="app_name">HTML Playground</string>

    <!-- Strings used for the toolbar -->
    <string name="action_settings">Settings</string>
    <string name="action_account">Profile</string>
    <string name="action_saves">Saves</string>


    <!-- Strings used for the login screen -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>




    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for the navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="register">Register</string>
    <string name="register_instead">Don\'t have an account? Register</string>
    <string name="login_instead">Already have an account? Login</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="html_input_placeholder">Enter HTML code here</string>
    <string name="save_button">Save</string>
    <string name="refresh_button">Refresh</string>
    <string name="profile">Profile</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="action_main">Playground</string>
    <string name="auto_refresh_checkbox">Auto Refresh HTML editor</string>
    <string name="clear_button">Clear</string>
    <string name="loading">Loading...</string>
    <string name="no_saved_codes">No saved codes</string>
    <string name="back">Back</string>
    <string name="motd_channel">motd</string>
    <string name="motd_channel_description">Message Of The Day</string>
</resources>