<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="me.ceze88.htmlplayground.MainActivity">

    <item android:id="@+id/action_main"
          android:title="@string/action_main"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/action_saves"
            android:title="@string/action_saves"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_account"
          android:title="@string/action_account"
          android:orderInCategory="100"
          app:showAsAction="never"/>


</menu>